NoticeBoardApi/src/main/java/com/example/exception/error/EmptyPostIdException.java
package com.example.exception.error;

public class EmptyPostIdException extends RuntimeException {
    public EmptyPostIdException(String methodName) {
        super(String.format("postId 부재(%s)",methodName));
    }
}
